# market-data-pipeline

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_book.cpp  bench_parser.cpp  bench_spsc.cpp
include/mdp/: book.hpp  bytes.hpp  consumers.hpp  feed_handler.hpp  instrumentation.hpp  parser.hpp  protocol.hpp  sequence_tracker.hpp  spsc_queue.hpp
python/: requirements.txt  research.py
scripts/: coverage.sh
src/: book.cpp  consumers.cpp  feed_handler.cpp  handler_main.cpp  instrumentation.cpp  parser.cpp  sequence_tracker.cpp  simulator_lib.cpp  simulator_main.cpp
tests/: CMakeLists.txt  test_book.cpp  test_consumers.cpp  test_coverage_extras.cpp  test_fuzz_parser.cpp  test_handler_integration.cpp  test_instrumentation.cpp  test_parser.cpp  test_protocol.cpp  test_replay.cpp  test_sequence.cpp  test_simulator.cpp  test_spsc.cpp
